--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "ts.check",
     "build",
     "add-build"
-],
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.2",
+    "@types/nodemailer": "^6.4.14",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
+    "nodemailer-gmail": "^3.0.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.4",
     "pre-commit": "^1.2.2",
